k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-server
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-server
  template:
    metadata:
      labels:
        app: mern-server
    spec:
      containers:
      - name: server
        image: hamaaa/mern-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
