k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-client
  namespace: mern-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mern-client
  template:
    metadata:
      labels:
        app: mern-client
    spec:
      containers:
      - name: client
        image: hamaaa/mern-client:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
