k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-server
  namespace: mern-app
spec:
  type: ClusterIP
  selector:
    app: mern-server
  ports:
  - port: 5000
    targetPort: 5000
