k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-client
  namespace: mern-app
spec:
  type: NodePort
  selector:
    app: mern-client
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
